[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/examples/leaderboards.gd" type="Script" id=1]
[ext_resource path="res://data/themes/button-theme.tres" type="Theme" id=2]
[ext_resource path="res://data/fonts/list-titles.tres" type="DynamicFont" id=3]
[ext_resource path="res://data/fonts/sub-titles.tres" type="DynamicFont" id=4]
[ext_resource path="res://data/fonts/descriptions.tres" type="DynamicFont" id=5]
[ext_resource path="res://data/fonts/output-text.tres" type="DynamicFont" id=6]
[ext_resource path="res://src/components/main-frame.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[node name="Leaderboards" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frame" parent="." instance=ExtResource( 7 )]
margin_bottom = 695.0

[node name="Title" parent="Frame/Main/Topbar" index="1"]
text = "Leaderboard Example"

[node name="Message" type="Label" parent="Frame/Main" index="1"]
margin_top = 73.0
margin_right = 905.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 5 )
text = "Most of these leaderboard functions may not work with the default 480 app ID (Spacewars). If you are using your own game's app ID, however, you should be able to use all the leaderboard functions fine; provided everything is set up correctly in your Steamworks back-end."
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Output Title" type="Label" parent="Frame/Main" index="2"]
margin_top = 158.0
margin_right = 905.0
margin_bottom = 177.0
custom_fonts/font = ExtResource( 4 )
text = "Output:"
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Output" type="RichTextLabel" parent="Frame/Main" index="3"]
margin_top = 202.0
margin_right = 905.0
margin_bottom = 562.0
rect_min_size = Vector2( 905, 360 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 6 )
custom_styles/normal = SubResource( 1 )
scroll_following = true
__meta__ = {
"_edit_lock_": true
}

[node name="Input Title" type="Label" parent="Frame/Main" index="4"]
margin_top = 587.0
margin_right = 905.0
margin_bottom = 606.0
custom_fonts/font = ExtResource( 4 )
text = "Leaderboard Name"
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="Frame/Main" index="5"]
margin_top = 631.0
margin_right = 905.0
margin_bottom = 670.0
custom_fonts/font = ExtResource( 6 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
placeholder_text = "Enter a leaderboard name"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" parent="Frame/Sidebar/Options/List" index="0"]
text = "Leaderboard Options"

[node name="AttachUGC" type="Button" parent="Frame/Sidebar/Options/List" index="1"]
margin_top = 32.0
margin_right = 270.0
margin_bottom = 60.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Attach Leaderboard UGC"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="DownloadEntries" type="Button" parent="Frame/Sidebar/Options/List" index="2"]
margin_top = 70.0
margin_right = 270.0
margin_bottom = 98.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Download Entries"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="DownloadUserEntries" type="Button" parent="Frame/Sidebar/Options/List" index="3"]
margin_top = 108.0
margin_right = 270.0
margin_bottom = 136.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Download Entries For Users"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="FindLeaderboard" type="Button" parent="Frame/Sidebar/Options/List" index="4"]
margin_top = 146.0
margin_right = 270.0
margin_bottom = 174.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Find Leaderboard"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="FindOrCreateLeaderboard" type="Button" parent="Frame/Sidebar/Options/List" index="5"]
margin_top = 184.0
margin_right = 270.0
margin_bottom = 212.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Find Or Create Leaderboard"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="GetLeaderboardDisplayType" type="Button" parent="Frame/Sidebar/Options/List" index="6"]
margin_top = 222.0
margin_right = 270.0
margin_bottom = 250.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Get Leaderboard Display Type"
align = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GetLeaderboardName" type="Button" parent="Frame/Sidebar/Options/List" index="7"]
margin_top = 260.0
margin_right = 270.0
margin_bottom = 288.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Get Leaderboard Name"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="GetLeaderboardSortMethod" type="Button" parent="Frame/Sidebar/Options/List" index="8"]
margin_top = 298.0
margin_right = 270.0
margin_bottom = 326.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Get Leaderboard Sort Method"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="GetLeaderboardEntryCount" type="Button" parent="Frame/Sidebar/Options/List" index="9"]
margin_top = 336.0
margin_right = 270.0
margin_bottom = 364.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Get Leaderboard Entry Count"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Spacer" type="Label" parent="Frame/Sidebar/Options/List" index="10"]
margin_top = 374.0
margin_right = 270.0
margin_bottom = 396.0
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Back" type="Button" parent="Frame/Sidebar/Options/List" index="11"]
margin_top = 406.0
margin_right = 270.0
margin_bottom = 434.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Back To Main Menu"
align = 0
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Frame/Sidebar/Options/List/AttachUGC" to="." method="_on_AttachLeaderboardUGC_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/DownloadEntries" to="." method="_on_DownloadLeaderboardEntries_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/DownloadUserEntries" to="." method="_on_DownloadLeaderboardEntriesForUsers_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/FindLeaderboard" to="." method="_on_FindLeaderboard_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/FindOrCreateLeaderboard" to="." method="_on_FindOrCreateLeaderboard_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/GetLeaderboardDisplayType" to="." method="_on_GetLeaderboardDisplayType_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/GetLeaderboardName" to="." method="_on_GetLeaderboardName_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/GetLeaderboardSortMethod" to="." method="_on_GetLeaderboardSortMethod_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/GetLeaderboardEntryCount" to="." method="_on_GetLeaderboardEntryCount_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/Back" to="." method="_on_Back_pressed"]

[editable path="Frame"]
